--- a/style.css
+++ b/style.css
@@ -122,11 +122,12 @@ body{
     object-fit: cover;
 }
 .titulo-do-quizz h1{
-    width: 254px;
+    width: 90%;
     color: #FFFFFF;
     font-size: 39px;
+    text-align: center;
     margin-top: -19.5px;
-    margin-left: -127px;
+    margin-left: -45%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -137,7 +138,7 @@ body{
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
     width: 759px;
-    height: 676px;
+    height: auto;
     margin: 0 auto 48px;
     display: flex;
     flex-direction: column;
@@ -145,12 +146,11 @@ body{
 }
 .pergunta-quizz header{
     color: white;
-    background-color: #434CA0;
     font-weight: bold;
     font-size: 23px;
     width: 688px;
     height: 137px;
-    margin: 0 auto;
+    margin: 25px auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -164,6 +164,7 @@ body{
 }
 .opçao-de-resposta figure{
     margin-bottom: 20px;
+    cursor: pointer;
 }
 .opçao-de-resposta img{
     width: 329px;
@@ -245,6 +246,7 @@ body{
     border: none;
     width: 260px;
     height: 52px;
+    cursor: pointer;
 }
 .final button:last-child{
     background-color: #fafafa;
@@ -252,6 +254,10 @@ body{
     font-size: 21px;
     border: none;
     margin: 16px 0 40px;
+    cursor: pointer;
+}
+.final button:hover{
+    opacity: 0.5;
 }
 
 /*Essa é a classe usada para "desligar" uma tela*/
