--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
 }
 
 /* ========================= */
-
+/*Estilização da Tela Inicial*/
 .sem-quizz-usuario {
     width: 1051px;
     height: 181px;
@@ -50,12 +50,17 @@ body{
     height: 40px;
     border: 1px dashed #EC362D;
     border-radius: 50px;
+    cursor: pointer;
 }
-
+.tela1-inicial article button:hover{
+    opacity: 0.6;
+}
+    /*Aqui é onde é estilizado os quizzes do servidor */
 .quizz-servidor{
-    width: 1051px;
+    width: 1080px;
     height: auto;
     margin: 0 auto;
+    padding-left: 15px;
 }
 .quizz-servidor header{
     font-weight: 700;
@@ -65,11 +70,11 @@ body{
 .quizz-servidor .todos-quizzes{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
 }
 .quizz-servidor figure{
     width: 340px;
     height: 181px;
+    margin-right: 15px;
     margin-bottom: 12px;
     cursor: pointer;
     position: relative;
@@ -84,7 +89,7 @@ body{
     border-radius: 5px;
     margin-bottom: 12px;
 }
-.quizz-servidor figure div{
+.gradiente{
     background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 64.58%, #000000 100%);
     width: 340px;
     height: 181px;
@@ -95,6 +100,63 @@ body{
     z-index: 1;
 }
 .quizz-servidor figure figcaption{
+    color: #FFFFFF;
+    width: 300px;
+    font-size: 19px;
+    line-height: 22px;
+    position: absolute;
+    bottom: 7px;
+    left: 18px;
+    z-index: 2;
+}
+    /*Aqui é onde é estilizado os quizzes do usuário*/
+.quizz-usuario{
+    width: 1080px;
+    height: auto;
+    margin: 140px auto 77px;
+    padding-left: 15px;
+}
+.quizz-usuario header{
+    margin-bottom: 12px;
+    display: flex;
+    align-items: center;
+}
+.quizz-usuario header h1{
+    font-weight: 700;
+    font-size: 20px;
+}
+.quizz-usuario header ion-icon{
+    color: #EC362D;
+    font-size: 31px;
+    margin-left: 17px;
+    cursor: pointer;
+}
+.quizz-usuario header ion-icon:hover{
+    opacity: 0.8;
+}
+.seus-quizzes{
+    display: flex;
+    flex-wrap: wrap;
+}
+.seus-quizzes figure{
+    width: 340px;
+    height: 181px;
+    margin-right: 15px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    position: relative;
+}
+.seus-quizzes figure:hover{
+    opacity: 0.8;
+}
+.seus-quizzes figure img{
+    width: 340px;
+    height: 181px;
+    object-fit: cover;
+    border-radius: 5px;
+    margin-bottom: 12px;
+}
+.seus-quizzes figure figcaption{
     color: #FFFFFF;
     width: 300px;
     font-size: 19px;
@@ -265,12 +327,6 @@ body{
 .final button:hover{
     opacity: 0.5;
 }
-
-/*Essa é a classe usada para "desligar" uma tela*/
-.oculto{
-    display: none;
-}
-
 
 /* nicolas já colocou o fun cinza claro */
 .create{
@@ -509,5 +565,8 @@ h3{
     font-size: 21px;
     color: #818181;
 }  
-/*Estilização da Tela Inicial*/
 /* ==================== */
+/*Essa é a classe usada para "desligar" uma tela*/
+.oculto{
+    display: none;
+}
