Funcionalidades de criacao de quizz completas - falta funcionalidades ligadas ao localStorage

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
 
 /* ========================= */
 
-.sem-quizz-usuario {
+ .sem-quizz-usuario {
     width: 1051px;
     height: 181px;
     margin: 140px auto 77px;
@@ -104,9 +104,9 @@ body{
     left: 18px;
     z-index: 2;
 }
-
+ 
 /*Estilização da segunda Tela (Exibição do quizz)*/
-.titulo-do-quizz{
+ .titulo-do-quizz{
     width: 100%;
     height: 227px;
     margin: 69px 0 42px;
@@ -137,9 +137,9 @@ body{
     top: 50%;
     left: 50%;
     z-index: 2;
-}
+} 
     /*Aqui sera feito o layout das perguntas*/
-.pergunta-quizz{
+ .pergunta-quizz{
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
     width: 759px;
@@ -176,11 +176,11 @@ body{
     height: 175px;
     object-fit: cover;
     margin-bottom: 5px;
-}
+} 
         /*Aqui será definido uma cor padrao para a descrição das img e
         uma cor correspondente a resposta certa e as erradas e tambem
         a estilizaçao quando clicado em uma alternativa*/
-.res-errada{
+ .res-errada{
     color: #FF4B4B;
     font-weight: 700;
     font-size: 20px;
@@ -197,9 +197,9 @@ body{
 }
 .desfocar{
     opacity: 0.3;
-}
+} 
     /*Aqui será estilizado o quadro do resultado e os botões*/
-.resultado-quizz{
+ .resultado-quizz{
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
     width: 759px;
@@ -264,13 +264,13 @@ body{
 }
 .final button:hover{
     opacity: 0.5;
-}
+} 
 
 /*Essa é a classe usada para "desligar" uma tela*/
-.oculto{
+/* .oculto{
     display: none;
 }
-
+ */
 
 /* nicolas já colocou o fun cinza claro */
 .create{
@@ -292,7 +292,7 @@ body{
     font-weight: 700;
     color: #000000;
     font-size: 23px;
-    margin-top: 80px;
+    margin-top: 135px;
 }
 
 .basicInfo{
@@ -413,7 +413,7 @@ body{
 }
 
 .createQuestions  > .expanded > .wrongImage{
-    margin-bottom: 28px;
+    margin-bottom: 30px;
 }
 
 .createQuestions > .expanded > input::placeholder{
@@ -432,6 +432,7 @@ body{
 }
 
 .createLevels{
+    position: relative;
     width: 600px;
     padding: 18px 17px;
     box-sizing: border-box;
@@ -443,12 +444,25 @@ body{
     justify-content: space-between;
 }
 
+.createLevels > .ionicon2 {
+    font-size: 35px;
+    position: absolute;
+    top: 28px;
+    right: 25px;
+    color: #000000;
+    opacity: 50%;
+}
+
 .createLevels > h2{
     font-weight: 700;
     color: #000000;
     font-size: 20px;
     margin-top: 18px;
     margin-bottom: 11px;
+}
+
+.createLevels > .reduced {
+    display: none;
 }
 
 .createLevels > input{
@@ -462,6 +476,23 @@ body{
 }
 
 .createLevels > input::placeholder{
+    font-size: 19px;
+    color: #bababa;
+    font-weight: 400;
+    font-style: italic;
+}
+
+.createLevels > .expanded2 > input{
+    width: 564px;
+    height: 46px;
+    padding-left: 20px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    border: 1px solid #d1d1d1;
+    margin-top: 9px;
+}
+
+.createLevels > .expanded2 > input::placeholder{
     font-size: 19px;
     color: #bababa;
     font-weight: 400;
