--- a/style.css
+++ b/style.css
@@ -328,6 +328,11 @@ body{
     opacity: 0.5;
 }
 
+/*Aqui é onde vai ser feito o layout responsivo*/
+@media(max-width: 400px){
+    
+}
+
 /* nicolas já colocou o fun cinza claro */
 .create{
     background-color: #E5E5E5;
