--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
     width: 1051px;
     height: 181px;
     margin: 140px auto 77px;
-    border: 1px dashed #D4D4D4;
+    border: 2px dashed #D4D4D4;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -75,6 +75,7 @@ body{
     height: 181px;
     margin-right: 15px;
     margin-bottom: 12px;
+    overflow: hidden;
     cursor: pointer;
     position: relative;
 }
@@ -140,6 +141,7 @@ body{
 .seus-quizzes figure{
     width: 340px;
     height: 181px;
+    overflow: hidden;
     margin-right: 15px;
     margin-bottom: 12px;
     cursor: pointer;
@@ -230,6 +232,7 @@ body{
 }
 .opçao-de-resposta figure{
     margin-bottom: 20px;
+    overflow: hidden;
     cursor: pointer;
 }
 .opçao-de-resposta img{
@@ -328,20 +331,150 @@ body{
 } 
 
 /*Aqui é onde vai ser feito o layout responsivo*/
-@media(max-width: 400px){
-    .tela1-inicial article button{
-        width: 88%;
-        padding: 0 3%;
-    }
+    /* Tela1 */
+@media(max-width: 1100px){
     .sem-quizz-usuario {
-        width: 100%;
-        margin-top: 140px ;
-        margin-left: 2%;
-        margin-right: 2%;
+        width: 92%;
+        height: 181px;
+        margin: 107px auto 38px;
     }
+
+    .quizz-usuario{
+        width: 100%;
+        margin: 107px 0 38px;
+        padding: 0 4%;
+    }
+    .quizz-usuario header{
+        margin-bottom: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .seus-quizzes{
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    .seus-quizzes figure{
+        width: 100%;
+        height: 181px;
+        margin-right: 0;
+        margin-bottom: 12px;
+    }
+    .seus-quizzes figure img{
+        width: 100%;
+        height: 181px;
+    }
+    .seus-quizzes figure figcaption{
+        width: 88%;
+    }
+    .gradiente{
+        width: 100%;
+        height: 181px;
+    }
+
     .quizz-servidor{
         width: 100%;
-        padding-left: 10%;
+        padding: 0 4%;
+    }
+    .quizz-servidor .todos-quizzes{
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    .quizz-servidor figure{
+        width: 100%;
+        height: 181px;
+        margin-right: 0;
+        margin-bottom: 12px;
+    }
+    .quizz-servidor figure img{
+        width: 100%;
+        height: 181px;
+    }
+    .quizz-servidor figure figcaption{
+        width: 88%;
+    }
+}
+
+    /* Tela2 */
+@media(max-width: 1100px){
+    .titulo-do-quizz,
+    .titulo-do-quizz div,
+    .titulo-do-quizz img{
+        width: 100%;
+        height: 142px;
+    }
+    .titulo-do-quizz{
+        margin: 69px 0 24px
+    }
+    .titulo-do-quizz h1{
+        font-size: 25px;
+    } 
+    .pergunta-quizz{
+        width: 100%;
+        height: auto;
+        margin: 0 0 48px;
+    }
+    .pergunta-quizz header{
+        font-size: 19px;
+        width: 90%;
+        height: 89px;
+        margin: 18px auto 13px;
+    }
+    .opçao-de-resposta{
+        width: 90%;
+        margin: 0 auto;
+    }
+    .opçao-de-resposta figure{
+        width: 48%;
+        height: auto;
+        margin-bottom: 12px;
+    }
+    .opçao-de-resposta img{
+        width: 100%;
+        height: 113px;
+        object-fit: cover;
+    }
+    .res-errada{
+        font-size: 13px;
+        width: 100%;
+        height: 10%;
+    }
+    .res-certa{
+        font-size: 13px;
+        width: 100%;
+        height: 10%;
+    }
+    .cor-padrao{
+        font-size: 13px;
+        width: 100%;
+        height: 10%;
+    }
+
+    .resultado-quizz{
+        width: 100%;
+        height: auto;
+        margin: 0 0 34px;
+    }
+    .resultado-quizz header{
+        font-size: 19px;
+        width: 90%;
+        height: 99px;
+        margin: 18px auto 9px;
+    }
+    .resultado-quizz figure{
+        width: 90%;
+        margin: 0 auto;
+        flex-direction: column;
+    }
+    .resultado-quizz img{
+        width: 100%;
+        height: 255px;
+        margin-bottom: 9px;
+    }
+    .resultado-quizz figcaption{
+        font-size: 17px;
+        margin-left: 0;
+        margin-bottom: 16px;
     }
 }
 
@@ -408,6 +541,10 @@ body{
     font-size: 21px;
     margin-top: 85px; 
     margin-bottom: 100px ;
+    cursor: pointer;
+}
+.createAquizz > button:hover{
+    opacity: 0.5;
 }
 
 .createQuestions{
@@ -572,6 +709,7 @@ body{
 }
  .gradient{
     position: absolute;
+    border-radius: 5px;
     top: 0;
     left: 0;
     width: 100%;
@@ -583,7 +721,6 @@ body{
     width: 100%;
     height: 100%;
     border-radius: 5px;
-    
 }
 
 .quizzReady > h2{
@@ -604,6 +741,11 @@ button.accessQuizz{
 h3{
     font-size: 21px;
     color: #818181;
+    cursor: pointer;
+}  
+
+h3:hover{
+    opacity: 0.5;
 }  
 /* ==================== */
 /*Essa é a classe usada para "desligar" uma tela*/
